--- a/infra/grafana/provisioning/datasources/datasources.yml
+++ b/infra/grafana/provisioning/datasources/datasources.yml
@@ -1,8 +1,10 @@
+---
 apiVersion: 1
 
 datasources:
   - name: Prometheus
     type: prometheus
+    uid: prometheus
     access: proxy
     orgId: 1
     url: http://prometheus:9090
@@ -11,10 +13,7 @@ datasources:
     version: 1
     editable: false
     jsonData:
-      exemplarTraceIdDestinations:
-        - datasourceUid: tempo
-          name: "traceID"
-    uid: prometheus
+      httpMethod: GET
 
   - name: Tempo
     type: tempo
@@ -26,7 +25,8 @@ datasources:
     version: 1
     editable: false
     apiVersion: 1
+    uid: tempo
     jsonData:
+      httpMethod: GET
       serviceMap:
         datasourceUid: prometheus
-    uid: tempo
