--- a/infra/prometheus/prometheus-config.yml
+++ b/infra/prometheus/prometheus-config.yml
@@ -1,8 +1,15 @@
+---
 global:
-  evaluation_interval: 30s
-  scrape_interval: 5s
+  scrape_interval: 15s
+  evaluation_interval: 15s
+
 scrape_configs:
-  - job_name: otel-collector
+  - job_name: prometheus
     static_configs:
       - targets:
-          - "otel-collector:8888"
+          - localhost:9090
+
+  - job_name: tempo
+    static_configs:
+      - targets:
+          - tempo:3200
