--- a/package.json
+++ b/package.json
@@ -33,31 +33,36 @@
     "build": "tsup"
   },
   "dependencies": {
-    "@effect/cli": "^0.30.3",
-    "@effect/experimental": "^0.6.10",
-    "@effect/platform": "^0.42.6",
-    "@effect/platform-node": "^0.41.7",
-    "@effect/schema": "^0.60.6",
-    "@sqlfx/sql": "^0.41.0",
-    "@sqlfx/sqlite": "^0.41.1",
-    "better-sqlite3": "^9.3.0",
-    "effect": "2.1.2",
-    "openai": "^4.24.7",
+    "@effect/cli": "^0.32.2",
+    "@effect/experimental": "^0.8.10",
+    "@effect/opentelemetry": "^0.30.14",
+    "@effect/platform": "^0.43.11",
+    "@effect/platform-node": "^0.42.11",
+    "@effect/schema": "^0.61.7",
+    "@opentelemetry/exporter-prometheus": "^0.48.0",
+    "@opentelemetry/exporter-trace-otlp-http": "^0.48.0",
+    "@opentelemetry/sdk-trace-base": "^1.21.0",
+    "@opentelemetry/sdk-trace-node": "^1.21.0",
+    "@sqlfx/sql": "^0.43.2",
+    "@sqlfx/sqlite": "^0.43.2",
+    "better-sqlite3": "^9.4.0",
+    "effect": "2.2.5",
+    "openai": "^4.26.1",
     "sqlite-vss": "^0.1.2",
-    "tiktoken-node": "^0.0.6"
+    "tiktoken-node": "^0.0.7"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
     "@effect/eslint-plugin": "^0.1.2",
     "@effect/language-service": "^0.1.0",
-    "@types/node": "^20.11.5",
-    "@typescript-eslint/eslint-plugin": "^6.19.0",
-    "@typescript-eslint/parser": "^6.19.0",
-    "@vitest/coverage-v8": "^1.2.1",
+    "@types/node": "^20.11.16",
+    "@typescript-eslint/eslint-plugin": "^6.21.0",
+    "@typescript-eslint/parser": "^6.21.0",
+    "@vitest/coverage-v8": "^1.2.2",
     "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^3.6.1",
-    "eslint-plugin-codegen": "^0.22.0",
+    "eslint-plugin-codegen": "^0.23.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-simple-import-sort": "^10.0.0",
@@ -66,7 +71,7 @@
     "tsup": "^8.0.1",
     "tsx": "^4.7.0",
     "typescript": "^5.3.3",
-    "vite": "^5.0.11",
-    "vitest": "^1.2.1"
+    "vite": "^5.0.12",
+    "vitest": "^1.2.2"
   }
 }
