--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,16 @@
 version: "3.9"
 
 services:
+  # OpenTelemetry Collector
+  otel-collector:
+    image: otel/opentelemetry-collector:0.87.0
+    command: [ "--config=/etc/otel-collector.yml" ]
+    volumes:
+      - ./infra/otel/collector.yaml:/etc/otel-collector.yml
+    ports:
+      - 4317:4317 # Otlp Grpc
+      - 4318:4318 # Otlp Http
+
   # Grafana
   grafana:
     image: grafana/grafana:10.2.3
@@ -13,11 +23,13 @@ services:
       - GF_AUTH_ANONYMOUS_ENABLED=true
       - GF_AUTH_ANONYMOUS_ORG_ROLE=Admin
       - GF_AUTH_DISABLE_LOGIN_FORM=true
-      - GF_FEATURE_TOGGLES_ENABLE=traceqlEditor traceQLStreaming metricsSummary
     volumes:
-      - ./infra/grafana/provisioning/:/etc/grafana/provisioning/
+      - ./infra/grafana/grafana.ini:/etc/grafana/grafana.ini
+      - ./infra/grafana/datasources.yaml:/etc/grafana/provisioning/datasources/datasources.yml
+      - ./infra/grafana/dashboards.yaml:/etc/grafana/provisioning/dashboards/dashboards.yml
+      - ./infra/grafana/dashboards:/etc/dashboards
     ports:
-      - 3000:3000
+      - 30001:3000
 
   # Prometheus
   prometheus:
@@ -28,20 +40,15 @@ services:
       - --web.enable-remote-write-receiver
       - --enable-feature=exemplar-storage
     volumes:
-      - ./infra/prometheus/prometheus-config.yml:/etc/prometheus.yaml
+      - ./infra/prometheus/prometheus.yaml:/etc/prometheus.yaml
     ports:
       - 9090:9090
 
   tempo:
     image: grafana/tempo:latest
-    command: [ "-config.file=/etc/tempo.yml" ]
+    command: ["-config.file=/etc/tempo.yml"]
     volumes:
-      - ./infra/tempo/tempo.yml:/etc/tempo.yml
+      - ./infra/tempo/tempo.yaml:/etc/tempo.yml
       - ./tempo-data:/tmp/tempo
     ports:
-      - 14268:14268  # jaeger ingest
-      - 3200:3200   # tempo
-      - 4317:4317  # otlp grpc
-      - 4318:4318  # otlp http
-      - 9095:9095  # tempo grpc
-      - 9411:9411   # zipkin
+      - 3200:3200 # tempo
