--- a/infra/grafana/datasources.yaml
+++ b/infra/grafana/datasources.yaml
@@ -14,6 +14,9 @@ datasources:
     editable: false
     jsonData:
       httpMethod: GET
+      exemplarTraceIdDestinations:
+        - datasourceUid: tempo
+          name: 'traceID'
 
   - name: Tempo
     type: tempo
@@ -30,3 +33,6 @@ datasources:
       httpMethod: GET
       serviceMap:
         datasourceUid: prometheus
+      spanBar:
+        type: Tag
+        tag: span.label
