--- a/infra/prometheus/prometheus.yaml
+++ b/infra/prometheus/prometheus.yaml
@@ -13,3 +13,8 @@ scrape_configs:
     static_configs:
       - targets:
           - tempo:3200
+
+  - job_name: oltp-metrics
+    static_configs:
+      - targets:
+          - otel-collector:8889
