--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,16 +1,6 @@
 version: "3.9"
 
 services:
-  # OpenTelemetry Collector
-  otel-collector:
-    image: otel/opentelemetry-collector:0.87.0
-    command: [ "--config=/etc/otel-collector.yml" ]
-    volumes:
-      - ./infra/otel/collector.yaml:/etc/otel-collector.yml
-    ports:
-      - 4317:4317 # Otlp Grpc
-      - 4318:4318 # Otlp Http
-
   # Grafana
   grafana:
     image: grafana/grafana:10.2.3
@@ -51,4 +41,9 @@ services:
       - ./infra/tempo/tempo.yaml:/etc/tempo.yml
       - ./tempo-data:/tmp/tempo
     ports:
-      - 3200:3200 # tempo
+      - "14268:14268" # jaeger ingest
+      - "3200:3200" # tempo
+      - "9095:9095" # tempo grpc
+      - "4317:4317" # otlp grpc
+      - "4318:4318" # otlp http
+      - "9411:9411" # zipkin
