--- a/package.json
+++ b/package.json
@@ -33,45 +33,46 @@
     "build": "tsup"
   },
   "dependencies": {
-    "@effect/cli": "^0.32.2",
-    "@effect/experimental": "^0.8.10",
-    "@effect/opentelemetry": "^0.30.14",
-    "@effect/platform": "^0.43.11",
-    "@effect/platform-node": "^0.42.11",
-    "@effect/schema": "^0.61.7",
+    "@effect/cli": "^0.34.1",
+    "@effect/experimental": "^0.9.18",
+    "@effect/opentelemetry": "^0.31.10",
+    "@effect/platform": "^0.46.1",
+    "@effect/platform-node": "^0.44.9",
+    "@effect/schema": "^0.63.0",
     "@opentelemetry/exporter-prometheus": "^0.48.0",
     "@opentelemetry/exporter-trace-otlp-http": "^0.48.0",
     "@opentelemetry/sdk-trace-base": "^1.21.0",
     "@opentelemetry/sdk-trace-node": "^1.21.0",
-    "@sqlfx/sql": "^0.43.2",
-    "@sqlfx/sqlite": "^0.43.2",
-    "better-sqlite3": "^9.4.0",
-    "effect": "2.2.5",
-    "openai": "^4.26.1",
+    "@sqlfx/sql": "^0.45.0",
+    "@sqlfx/sqlite": "^0.45.0",
+    "better-sqlite3": "^9.4.3",
+    "effect": "2.4.0",
+    "openai": "^4.28.0",
     "sqlite-vss": "^0.1.2",
     "tiktoken-node": "^0.0.7"
   },
   "devDependencies": {
     "@changesets/changelog-github": "^0.5.0",
     "@changesets/cli": "^2.27.1",
+    "@effect/codemod": "^0.0.6",
     "@effect/eslint-plugin": "^0.1.2",
     "@effect/language-service": "^0.1.0",
-    "@types/node": "^20.11.16",
-    "@typescript-eslint/eslint-plugin": "^6.21.0",
-    "@typescript-eslint/parser": "^6.21.0",
-    "@vitest/coverage-v8": "^1.2.2",
+    "@types/node": "^20.11.19",
+    "@typescript-eslint/eslint-plugin": "^7.0.2",
+    "@typescript-eslint/parser": "^7.0.2",
+    "@vitest/coverage-v8": "^1.3.1",
     "eslint": "^8.56.0",
     "eslint-import-resolver-typescript": "^3.6.1",
     "eslint-plugin-codegen": "^0.23.0",
     "eslint-plugin-deprecation": "^2.0.0",
     "eslint-plugin-import": "^2.29.1",
-    "eslint-plugin-simple-import-sort": "^10.0.0",
+    "eslint-plugin-simple-import-sort": "^12.0.0",
     "eslint-plugin-sort-destructure-keys": "^1.5.0",
     "rimraf": "^5.0.5",
-    "tsup": "^8.0.1",
-    "tsx": "^4.7.0",
+    "tsup": "^8.0.2",
+    "tsx": "^4.7.1",
     "typescript": "^5.3.3",
-    "vite": "^5.0.12",
-    "vitest": "^1.2.2"
+    "vite": "^5.1.4",
+    "vitest": "^1.3.1"
   }
 }
